--- a/srcs/files/backend/package.json
+++ b/srcs/files/backend/package.json
@@ -2,7 +2,7 @@
   "name": "backend",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "src/main.ts",
   "scripts": {
     "prestart": "tsc",
     "start": "nest start",
