feature (updated STORAGE_PATH automatically) : I created a scrip to updated STORAGE_PATH in .env file automatically

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -77,6 +77,7 @@ volumes:
   react_build:  # Added name for the react_build volume
     name: react_build
   frontend_volume:
+    name: frontend_volume
     driver: local
     driver_opts:
       type: 'none'
