--- a/srcs/files/backend/package.json
+++ b/srcs/files/backend/package.json
@@ -4,20 +4,20 @@
   "description": "",
   "main": "src/main.ts",
   "scripts": {
-    "prestart": "tsc",
     "start": "nest start",
+    "prestart": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "@nestjs/cli": "^9.0.0",
-    "@nestjs/common": "^9.0.0",
-    "@nestjs/core": "^9.0.0",
-    "@nestjs/platform-express": "^9.0.0",
-    "@nestjs/typeorm": "^9.0.1",
-    "typeorm": "^0.3.15",
-    "pg": "^8.11.0",
-    "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.8.1",
-    "serve-static": "^1.14.1"
+    "@nestjs/cli": "9.5.0",
+    "@nestjs/common": "9.4.2",
+    "@nestjs/core": "9.4.2",
+    "@nestjs/platform-express": "9.4.2",
+    "@nestjs/typeorm": "9.0.1",
+    "typeorm": "0.3.15",
+    "pg": "8.11.0",
+    "reflect-metadata": "0.1.13",
+    "rxjs": "7.8.1",
+    "serve-static": "1.15.0"
   }
 }
