feat(prisma set up) : set up prisma schema file and modified env file with database URL but not working because .env is not in the relative path needed

--- a/.env
+++ b/.env
@@ -7,6 +7,8 @@ POSTGRES_HOST=db # The hostname of your PostgreSQL database. In docker-compose, 
 
 # Other settings
 STORAGE_PATH=/Users/anaandric/Desktop/42
+# Environment variables declared in this file are automatically made available to Prisma.
+# See the documentation for more detail: https://pris.ly/d/prisma-schema#accessing-environment-variables-from-the-schema
 
 # Environment variables declared in this file are automatically made available to Prisma.
 # See the documentation for more detail: https://pris.ly/d/prisma-schema#accessing-environment-variables-from-the-schema
