feat(prisma set up) : set up prisma schema file and modified env file with database URL but not working because .env is not in the relative path needed

--- a/srcs/.env
+++ b/srcs/.env
@@ -7,3 +7,5 @@ POSTGRES_HOST=db # The hostname of your PostgreSQL database. In docker-compose, 
 
 # Other settings
 STORAGE_PATH=/Users/alexandervalencia/Documents/programing/Docker/ # The storage path for Docker
+
+DATABASE_URL="postgresql://42_lyon:BornToCode@localhost:5434/nest?schema=public"
