--- a/srcs/files/nginx/default.conf
+++ b/srcs/files/nginx/default.conf
@@ -8,31 +8,11 @@ server {
     # The server_name directive sets the request hostname this server block should respond to.
     server_name localhost;
 
-    # This location block handles all requests to URIs beginning with '/' (the root URI).
     location / {
-        # The root directive specifies the root directory that will be used to search for a file. 
-        # To translate a URI to a file path, Nginx appends the request URI to the path specified in the root directive.
-        root /usr/share/nginx/html;
-
-        # The index directive specifies the default file to be delivered to the client for a specific directory, 
-        # if a URI mapping to that directory is requested without specifying a particular file.
-        index index.html index.htm;
-
-        # The try_files directive checks for the existence of files in order, 
-        # and returns the first one that is found. If none are found, Nginx will return a 404 error.
-        # This is especially useful for single page apps, which rely on client-side routing. 
-        # Without this directive, an app would not be able to route to /some/page because Nginx would look for 
-        # a file at /var/www/html/some/page and return a 404 error if it didn't exist.
-        try_files $uri $uri/ /index.html =404;
+        proxy_pass http://frontend:3000;  # The frontend container port
     }
 
-    # The error_page directive allows you to specify a custom page to be displayed when a specific error code or 
-    # a range of error codes occur. The following two error_page directives specify custom pages for 4xx and 5xx errors.
-    error_page 404 /404.html;
-    location = /40x.html {
-    }
-
-    error_page 500 502 503 504 /50x.html;
-    location = /50x.html {
+    location /api {
+        proxy_pass http://backend:4000; # The backend container port
     }
 }
