--- a/.env
+++ b/.env
@@ -1,7 +1,11 @@
-# Environment variables declared in this file are automatically made available to Prisma.
-# See the documentation for more detail: https://pris.ly/d/prisma-schema#accessing-environment-variables-from-the-schema
+# .env file
+# Database settings
+POSTGRES_DB=ft_transcendance_database # The name of your PostgreSQL database
+POSTGRES_USER=42_lyon # Your PostgreSQL username
+POSTGRES_PASSWORD=BornToCode # Your PostgreSQL password
+POSTGRES_HOST=db # The hostname of your PostgreSQL database. In docker-compose, this is the name of your database service
 
-# Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
-# See the documentation for all the connection string options: https://pris.ly/d/connection-strings
+# Other settings
+STORAGE_PATH=/Users/alexandervalencia/Documents/programing/Docker/ # The storage path for Docker
 
 DATABASE_URL="postgresql://42_lyon:BornToCode@localhost:5434/nest?schema=public"
