--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,7 +24,7 @@ services:
     env_file:
       - ./.env # Set the environment file
     build:
-      context: ./files/backend # Set the build context
+      context: ./srcs/backend # Set the build context
       dockerfile: Dockerfile # Set the Dockerfile
     image: backend_image # Set the image name
     ports:
@@ -38,7 +38,7 @@ services:
   frontend:
     container_name: frontend_container # Set the container name
     build:
-      context: ./files/frontend # Set the build context
+      context: ./srcs/frontend # Set the build context
       dockerfile: Dockerfile # Set the Dockerfile
     image: frontend_image # Set the image name
     volumes:
@@ -53,7 +53,7 @@ services:
   nginx:
     container_name: nginx_container # Set the container name
     build:
-      context: ./files/nginx # Set the build context
+      context: ./srcs/nginx # Set the build context
       dockerfile: Dockerfile # Set the Dockerfile
     image: nginx_image # Set the image name
     volumes:
@@ -81,5 +81,5 @@ volumes:
     driver_opts:
       type: 'none'
       o: 'bind'
-      device: './files/frontend/app'
+      device: './srcs/frontend/app'
     
