--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
   db:
     container_name: db_container # Set the container name
     env_file:
-      - ./.env # Set the environment file
+      - .env # Set the environment file
     image: postgres:15.3 # Set the image name and set up version
     ports:
       - 5434:5434
@@ -22,7 +22,7 @@ services:
   backend:
     container_name: backend_container # Set the container name
     env_file:
-      - ./.env # Set the environment file
+      - .env # Set the environment file
     build:
       context: ./srcs/backend # Set the build context
       dockerfile: Dockerfile # Set the Dockerfile
@@ -53,7 +53,7 @@ services:
   nginx:
     container_name: nginx_container # Set the container name
     build:
-      context: ./nginx # Set the build context
+      context: ./srcs/nginx # Set the build context
       dockerfile: Dockerfile # Set the Dockerfile
     image: nginx_image # Set the image name
     volumes:
