--- a/.env
+++ b/.env
@@ -6,6 +6,5 @@ POSTGRES_PASSWORD=BornToCode # Your PostgreSQL password
 POSTGRES_HOST=db # The hostname of your PostgreSQL database. In docker-compose, this is the name of your database service
 
 # Other settings
-STORAGE_PATH=/Users/alexandervalencia/Documents/programing/Docker/ # The storage path for Docker
-
+STORAGE_PATH=/Users/anaandric/Desktop/42
 DATABASE_URL="postgresql://42_lyon:BornToCode@localhost:5434/nest?schema=public"
