--- a/srcs/backend/package.json
+++ b/srcs/backend/package.json
@@ -20,7 +20,7 @@
     "typeorm": "0.3.15"
   },
   "devDependencies": {
-    "nodemon": "2.0.22",
-    "ts-node": "10.9.1"
+    "nodemon": "^2.0.22",
+    "ts-node": "^10.9.1"
   }
 }
