feat (Port Database): changed port in docker compose file and updated Database url in .env

--- a/.env
+++ b/.env
@@ -7,3 +7,5 @@ POSTGRES_HOST=db # The hostname of your PostgreSQL database. In docker-compose, 
 
 # Other settings
 STORAGE_PATH=/Users/anaandric/Desktop/42
+
+DATABASE_URL="postgresql://42_lyon:BornToCode@localhost:5434/ft_transcendance_database?schema=public" 
