--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,8 @@ services:
     env_file:
       - .env # Set the environment file
     image: postgres:15.3 # Set the image name and set up version
+    ports:
+      - 5434:5432
     volumes:
       - db_volume:/var/lib/postgresql/data # Mount the volume
     environment:
