--- a/srcs/backend/package.json
+++ b/srcs/backend/package.json
@@ -21,6 +21,10 @@
   },
   "devDependencies": {
     "nodemon": "^2.0.22",
+    "prisma": "4.15.0",
     "ts-node": "^10.9.1"
+  },
+  "prisma": {
+    "seed": "ts-node --transpile-only prisma/seed.ts"
   }
 }
