--- a/srcs/backend/package.json
+++ b/srcs/backend/package.json
@@ -13,6 +13,7 @@
     "@nestjs/core": "9.4.2",
     "@nestjs/platform-express": "9.4.2",
     "@nestjs/typeorm": "9.0.1",
+    "@prisma/client": "^4.15.0",
     "pg": "8.11.0",
     "reflect-metadata": "0.1.13",
     "rxjs": "7.8.1",
