--- a/srcs/backend/package.json
+++ b/srcs/backend/package.json
@@ -21,7 +21,7 @@
     "typeorm": "0.3.15"
   },
   "devDependencies": {
-    "nodemon": "^2.0.22",
+    "nodemon": "2.0.22",
     "prisma": "4.15.0",
     "ts-node": "^10.9.1"
   },
