--- a/srcs/backend/package.json
+++ b/srcs/backend/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@nestjs/cli": "9.5.0",
     "@nestjs/common": "9.4.2",
+    "@nestjs/config": "1.1.6",
     "@nestjs/core": "9.4.2",
     "@nestjs/platform-express": "9.4.2",
     "@nestjs/typeorm": "9.0.1",
