--- a/srcs/backend/package.json
+++ b/srcs/backend/package.json
@@ -19,7 +19,8 @@
     "reflect-metadata": "0.1.13",
     "rxjs": "7.8.1",
     "serve-static": "1.15.0",
-    "typeorm": "0.3.15"
+    "typeorm": "0.3.15",
+    "express": "4.12.3"
   },
   "devDependencies": {
     "nodemon": "^2.0.22",
