--- a/package.json
+++ b/package.json
@@ -3,6 +3,11 @@
     "prisma": "^4.15.0"
   },
   "dependencies": {
-    "@prisma/client": "^4.15.0"
+    "@nestjs/platform-socket.io": "^9.4.3",
+    "@nestjs/websockets": "^9.4.3",
+    "@prisma/client": "^4.15.0",
+    "@types/socket.io-client": "^3.0.0",
+    "socket.io": "^4.6.2",
+    "socket.io-client": "^4.6.2"
   }
 }
