--- a/srcs/backend/package.json
+++ b/srcs/backend/package.json
@@ -5,7 +5,8 @@
   "main": "src/main.ts",
   "scripts": {
     "start": "nodemon",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start:dev": "nest start --watch"
   },
   "dependencies": {
     "@nestjs/cli": "9.5.0",
