--- a/srcs/backend/package.json
+++ b/srcs/backend/package.json
@@ -13,12 +13,14 @@
     "@nestjs/config": "1.1.6",
     "@nestjs/core": "9.4.2",
     "@nestjs/platform-express": "9.4.2",
+    "@nestjs/platform-socket.io": "^9.4.3",
     "@nestjs/typeorm": "9.0.1",
     "@prisma/client": "^4.15.0",
     "pg": "8.11.0",
     "reflect-metadata": "0.1.13",
     "rxjs": "7.8.1",
     "serve-static": "1.15.0",
+    "socket.io": "^4.6.2",
     "typeorm": "0.3.15"
   },
   "devDependencies": {
