--- a/srcs/frontend/app/package.json
+++ b/srcs/frontend/app/package.json
@@ -7,6 +7,7 @@
     "@emotion/styled": "11.11.0",
     "@mui/icons-material": "5.11.16",
     "@mui/material": "5.13.4",
+    "@nestjs/platform-express": "^9.4.3",
     "@testing-library/jest-dom": "5.16.5",
     "@testing-library/react": "14.0.0",
     "@testing-library/user-event": "14.4.3",
@@ -17,6 +18,7 @@
     "react-konva": "18.2.9",
     "react-scripts": "5.0.1",
     "run": "1.4.0",
+    "socket.io-client": "^4.6.2",
     "web-vitals": "2.1.4"
   },
   "scripts": {
