--- a/srcs/frontend/app/package.json
+++ b/srcs/frontend/app/package.json
@@ -8,11 +8,11 @@
     "@mui/icons-material": "5.11.16",
     "@mui/material": "5.13.4",
     "@nestjs/platform-express": "^9.4.3",
+    "@prisma/client": "^4.15.0",
     "@testing-library/jest-dom": "5.16.5",
     "@testing-library/react": "14.0.0",
     "@testing-library/user-event": "14.4.3",
     "konva": "9.2.0",
-    "prisma": "4.15.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-konva": "18.2.9",
@@ -23,6 +23,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "start:dev": "nest start --watch",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -44,5 +45,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "prisma": "^4.15.0"
   }
 }
