--- a/srcs/backend/package.json
+++ b/srcs/backend/package.json
@@ -1,27 +1,30 @@
 {
   "name": "backend",
   "version": "1.0.0",
-  "description": "",
+  "description": "📦 Version: 1.0.0",
   "main": "src/main.ts",
   "scripts": {
+    "start:dev": "nest start --watch",
     "start": "nodemon",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "author": "",
+  "license": "ISC",
   "dependencies": {
-    "@nestjs/cli": "9.5.0",
-    "@nestjs/common": "9.4.2",
-    "@nestjs/config": "1.1.6",
-    "@nestjs/core": "9.4.2",
-    "@nestjs/platform-express": "9.4.2",
+    "@nestjs/cli": "^9.5.0",
+    "@nestjs/common": "^9.4.3",
+    "@nestjs/config": "^2.3.4",
+    "@nestjs/core": "^9.4.3",
+    "@nestjs/platform-express": "^9.4.3",
     "@nestjs/platform-socket.io": "^9.4.3",
-    "@nestjs/typeorm": "9.0.1",
+    "@nestjs/typeorm": "^9.0.1",
     "@prisma/client": "^4.15.0",
-    "pg": "8.11.0",
-    "reflect-metadata": "0.1.13",
-    "rxjs": "7.8.1",
-    "serve-static": "1.15.0",
+    "pg": "^8.11.0",
+    "reflect-metadata": "^0.1.13",
+    "rxjs": "^7.8.1",
+    "serve-static": "^1.15.0",
     "socket.io": "^4.6.2",
-    "typeorm": "0.3.15"
+    "typeorm": "^0.3.16"
   },
   "devDependencies": {
     "nodemon": "^2.0.22",
@@ -30,5 +33,8 @@
   },
   "prisma": {
     "seed": "ts-node --transpile-only prisma/seed.ts"
-  }
+  },
+  "resolutions": {
+    "@nestjs/config": "1.0.1"
+  }  
 }
