--- a/srcs/backend/package.json
+++ b/srcs/backend/package.json
@@ -12,11 +12,15 @@
     "@nestjs/common": "9.4.2",
     "@nestjs/core": "9.4.2",
     "@nestjs/platform-express": "9.4.2",
+    "@nestjs/platform-socket.io": "^9.4.2",
     "@nestjs/typeorm": "9.0.1",
+    "@nestjs/websockets": "^9.4.3",
+    "cors": "^2.8.5",
     "pg": "8.11.0",
     "reflect-metadata": "0.1.13",
     "rxjs": "7.8.1",
     "serve-static": "1.15.0",
+    "socket.io": "^4.6.2",
     "typeorm": "0.3.15"
   },
   "devDependencies": {
