--- a/srcs/backend/tsconfig.json
+++ b/srcs/backend/tsconfig.json
@@ -8,5 +8,5 @@
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true
   },
-  "include": ["src/**/*.ts"]
+  "include": ["src/**/*.ts", "src/socket/socketEvents.tsx"]
 }
