--- a/srcs/backend/package.json
+++ b/srcs/backend/package.json
@@ -19,6 +19,7 @@
     "@nestjs/platform-socket.io": "^9.4.3",
     "@nestjs/typeorm": "^9.0.1",
     "@prisma/client": "^4.15.0",
+    "axios": "^1.4.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "cors": "^2.8.5",
