--- a/srcs/frontend/app/package.json
+++ b/srcs/frontend/app/package.json
@@ -13,6 +13,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.4.3",
+    "axios": "^1.4.0",
     "konva": "^9.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -49,6 +50,7 @@
     ]
   },
   "devDependencies": {
+    "backend": "file:../../backend",
     "prisma": "^4.15.0"
   }
 }
