feat(clean DATABASE_URL): set the env variable in all DATABASE URL calls -  cleaner safer

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,8 @@ services:
     container_name: db_container # Set the container name
     env_file:
       - .env # Set the environment file
+      - ./srcs/backend/prisma/.env # Set the environment file
+
     image: postgres:15.3 # Set the image name and set up version
     ports:
       - 5432
@@ -23,7 +25,7 @@ services:
     container_name: backend_container # Set the container name
     env_file:
       - .env # Set the environment file
-      - ./prisma/.env # Set the environment file
+      - ./srcs/backend/prisma/.env
     build:
       context: ./srcs/backend # Set the build context
       dockerfile: Dockerfile # Set the Dockerfile
