--- a/srcs/backend/Dockerfile
+++ b/srcs/backend/Dockerfile
@@ -7,8 +7,8 @@ WORKDIR /usr/src/app
 # This line copies the package.json and package-lock.json (if available) files from your local directory to the Docker container's working directory.
 COPY package*.json ./  
 
+# Copy prisma file in working directory
 COPY /prisma /usr/src/app 
-
 
 # This line tells Docker to listen on port 4000 at runtime. This is the port that your application will be available on.
 EXPOSE 4000
