--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,6 +20,19 @@ services:
     networks:
       - app_network # Connect to the app network
 
+  prisma-studio:
+    container_name: prisma_studio
+    build:
+      context: .
+      dockerfile: Dockerfile
+    command: npx prisma studio --schema=srcs/backend/prisma/schema.prisma
+    ports:
+      - 5555:5555
+    depends_on:
+      - db
+    networks:
+      - app_network
+
   # Backend Service
   backend:
     container_name: backend_container # Set the container name
@@ -37,7 +50,7 @@ services:
     networks:
       - app_network # Connect to the app network
     depends_on:
-      - db 
+      - db
 
   # Frontend Service
   frontend:
@@ -47,7 +60,7 @@ services:
       dockerfile: Dockerfile # Set the Dockerfile
     image: frontend_image # Set the image name
     volumes:
-    - frontend_volume:/app
+      - frontend_volume:/app
     ports:
       - 8080:3000 # Map the container port to the host port
     networks:
@@ -71,10 +84,12 @@ services:
     stdin_open: true
 
 networks:
-  app_network: # Define the app network
+  app_network:
+    # Define the app network
 
 volumes:
-  db_volume: # Define the db volume
+  db_volume:
+    # Define the db volume
     name: db_volume # Set the volume name
   frontend_volume:
     name: frontend_volume
