checkout to main

--- a/srcs/backend/package.json
+++ b/srcs/backend/package.json
@@ -4,6 +4,8 @@
   "description": "📦 Version: 1.0.0",
   "main": "src/main.ts",
   "scripts": {
+    "prisma:dev:deploy": "npx prisma migrate deploy",
+    "prisma:studio": "npx prisma studio &",
     "start:dev": "nest start --watch",
     "start": "nodemon",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -15,16 +17,22 @@
     "@nestjs/common": "^9.4.3",
     "@nestjs/config": "^2.3.4",
     "@nestjs/core": "^9.4.3",
+    "@nestjs/jwt": "^10.1.0",
+    "@nestjs/passport": "^10.0.0",
     "@nestjs/platform-express": "^9.4.3",
     "@nestjs/platform-socket.io": "^9.4.3",
     "@nestjs/typeorm": "^9.0.1",
     "@prisma/client": "^4.15.0",
+    "@types/passport-jwt": "^3.0.9",
     "argon2": "^0.30.3",
     "axios": "^1.4.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "passport": "^0.6.0",
+    "passport-42": "^1.2.6",
+    "passport-jwt": "^4.0.1",
     "pg": "^8.11.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
