--- a/srcs/frontend/app/package.json
+++ b/srcs/frontend/app/package.json
@@ -22,6 +22,7 @@
     "run": "^1.4.0",
     "socket.io-client": "^4.7.0",
     "socket.io-parser": "^4.2.4",
+    "styled-components": "^6.0.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
