--- a/srcs/backend/package.json
+++ b/srcs/backend/package.json
@@ -29,6 +29,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "passport": "^0.6.0",
     "passport-42": "^1.2.6",
