--- a/srcs/backend/package.json
+++ b/srcs/backend/package.json
@@ -22,7 +22,7 @@
     "@nestjs/platform-express": "^9.4.3",
     "@nestjs/platform-socket.io": "^9.4.3",
     "@nestjs/typeorm": "^9.0.1",
-    "@prisma/client": "^4.15.0",
+    "@prisma/client": "^5.0.0",
     "@types/passport-jwt": "^3.0.9",
     "argon2": "^0.30.3",
     "axios": "^1.4.0",
@@ -44,7 +44,7 @@
   },
   "devDependencies": {
     "nodemon": "^2.0.22",
-    "prisma": "4.15.0",
+    "prisma": "^5.0.0",
     "ts-node": "^10.9.1"
   },
   "prisma": {
