features (homepage | auth front | https only cookis authentification | refresh token backend)

--- a/srcs/frontend/package.json
+++ b/srcs/frontend/package.json
@@ -14,10 +14,12 @@
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.4.3",
     "axios": "^1.4.0",
+    "jwt-decode": "^3.1.2",
     "konva": "^9.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-konva": "^18.2.9",
+    "react-router-dom": "^6.15.0",
     "react-scripts": "^5.0.1",
     "run": "^1.4.0",
     "socket.io-client": "^4.7.0",
