--- a/srcs/backend/package.json
+++ b/srcs/backend/package.json
@@ -8,43 +8,50 @@
     "prisma:studio": "npx prisma studio &",
     "start:dev": "nest start --watch",
     "start": "nodemon",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest",
+    "build": "tsc"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@nestjs/cli": "^9.5.0",
-    "@nestjs/common": "^9.4.3",
-    "@nestjs/config": "^2.3.4",
-    "@nestjs/core": "^9.4.3",
+    "@nestjs/cli": "^10.1.12",
+    "@nestjs/common": "^10.2.0",
+    "@nestjs/config": "^3.0.0",
+    "@nestjs/core": "^10.2.0",
     "@nestjs/jwt": "^10.1.0",
     "@nestjs/passport": "^10.0.0",
-    "@nestjs/platform-express": "^9.4.3",
-    "@nestjs/platform-socket.io": "^9.4.3",
-    "@nestjs/typeorm": "^9.0.1",
-    "@prisma/client": "^4.15.0",
+    "@nestjs/platform-express": "^10.2.0",
+    "@nestjs/platform-socket.io": "^10.2.0",
+    "@nestjs/typeorm": "^10.0.0",
+    "@prisma/client": "^5.1.1",
     "@types/passport-jwt": "^3.0.9",
-    "argon2": "^0.30.3",
+    "argon2": "^0.31.0",
     "axios": "^1.4.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "passport": "^0.6.0",
     "passport-42": "^1.2.6",
     "passport-jwt": "^4.0.1",
-    "pg": "^8.11.0",
+    "pg": "^8.11.3",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
     "serve-static": "^1.15.0",
-    "socket.io": "^4.7.0",
+    "socket.io": "^4.7.2",
     "socket.io-parser": "^4.2.4",
-    "typeorm": "^0.3.16"
+    "typeorm": "^0.3.17"
   },
   "devDependencies": {
-    "nodemon": "^2.0.22",
-    "prisma": "4.15.0",
-    "ts-node": "^10.9.1"
+    "@types/cookie-parser": "^1.4.3",
+    "@types/jest": "^29.5.3",
+    "jest": "^29.6.3",
+    "nodemon": "^3.0.1",
+    "prisma": "5.1.1",
+    "ts-jest": "^29.1.1",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.1.6"
   },
   "prisma": {
     "seed": "ts-node --transpile-only prisma/seed.ts"
