--- a/srcs/backend/package.json
+++ b/srcs/backend/package.json
@@ -22,6 +22,7 @@
     "@nestjs/platform-express": "^9.4.3",
     "@nestjs/platform-socket.io": "^9.4.3",
     "@nestjs/typeorm": "^9.0.1",
+    "@nestjsplus/redirect": "^1.0.0",
     "@prisma/client": "^5.0.0",
     "@types/passport-jwt": "^3.0.9",
     "argon2": "^0.30.3",
