--- a/srcs/frontend/app/package.json
+++ b/srcs/frontend/app/package.json
@@ -19,10 +19,11 @@
     "react-dom": "^18.2.0",
     "react-konva": "^18.2.9",
     "react-scripts": "^5.0.1",
+    "reactjs-popup": "^2.0.5",
     "run": "^1.4.0",
     "socket.io-client": "^4.7.0",
     "socket.io-parser": "^4.2.4",
-    "styled-components": "^6.0.4",
+    "styled-components": "^6.0.6",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
