--- a/srcs/backend/package.json
+++ b/srcs/backend/package.json
@@ -22,6 +22,7 @@
     "@nestjs/passport": "^10.0.0",
     "@nestjs/platform-express": "^10.2.0",
     "@nestjs/platform-socket.io": "^10.2.0",
+    "@nestjs/testing": "^10.2.4",
     "@nestjs/typeorm": "^10.0.0",
     "@prisma/client": "^5.1.1",
     "@types/passport-jwt": "^3.0.9",
@@ -29,6 +30,7 @@
     "axios": "^1.4.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "cloudinary": "^1.40.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "express": "^4.18.2",
@@ -45,7 +47,9 @@
   },
   "devDependencies": {
     "@types/cookie-parser": "^1.4.3",
+    "@types/express": "^4.17.17",
     "@types/jest": "^29.5.3",
+    "@types/multer": "^1.4.7",
     "jest": "^29.6.3",
     "nodemon": "^3.0.1",
     "prisma": "5.1.1",
