--- a/srcs/backend/package.json
+++ b/srcs/backend/package.json
@@ -37,11 +37,13 @@
     "passport-42": "^1.2.6",
     "passport-jwt": "^4.0.1",
     "pg": "^8.11.0",
+    "qrcode": "^1.5.3",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
     "serve-static": "^1.15.0",
     "socket.io": "^4.7.0",
     "socket.io-parser": "^4.2.4",
+    "speakeasy": "^2.0.0",
     "typeorm": "^0.3.16"
   },
   "devDependencies": {
