feature(automatic nodeJs and package.json updates): configures entrypoint.sh to perform updated automatically as it was not the case before

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -40,6 +40,10 @@ services:
       - app_network # Connect to the app network
     depends_on:
       - db
+    tty: true
+    stdin_open: true
+    restart: unless-stopped
+
 
   # Frontend Service
   frontend:
