--- a/srcs/backend/package.json
+++ b/srcs/backend/package.json
@@ -15,20 +15,22 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@nestjs/cli": "^9.5.0",
-    "@nestjs/common": "^9.4.3",
-    "@nestjs/config": "^2.3.4",
-    "@nestjs/core": "^9.4.3",
-    "@nestjs/jwt": "^10.1.0",
-    "@nestjs/passport": "^10.0.0",
-    "@nestjs/platform-express": "^10.2.0",
-    "@nestjs/platform-socket.io": "^10.2.0",
-    "@nestjs/testing": "^10.2.4",
+    "@nestjs/cli": "^10.1.17",
+    "@nestjs/common": "^10.2.5",
+    "@nestjs/config": "^3.1.1",
+    "@nestjs/core": "^10.2.5",
+    "@nestjs/jwt": "^10.1.1",
+    "@nestjs/passport": "^10.0.2",
+    "@nestjs/platform-express": "^10.2.5",
+    "@nestjs/platform-socket.io": "^10.2.5",
+    "@nestjs/testing": "^10.2.5",
     "@nestjs/typeorm": "^10.0.0",
-    "@prisma/client": "^5.1.1",
+    "@nestjs/websockets": "^10.2.5",
+    "@prisma/client": "^5.3.1",
     "@types/passport-jwt": "^3.0.9",
-    "argon2": "^0.30.3",
-    "axios": "^1.4.0",
+    "@types/uuid": "^9.0.4",
+    "argon2": "^0.31.1",
+    "axios": "^1.5.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "cloudinary": "^1.40.0",
@@ -38,30 +40,31 @@
     "passport": "^0.6.0",
     "passport-42": "^1.2.6",
     "passport-jwt": "^4.0.1",
-    "pg": "^8.11.0",
+    "pg": "^8.11.3",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
     "serve-static": "^1.15.0",
-    "socket.io": "^4.7.0",
+    "socket.io": "^4.7.2",
     "socket.io-parser": "^4.2.4",
-    "typeorm": "^0.3.16"
+    "typeorm": "^0.3.17",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
-    "@types/cookie-parser": "^1.4.3",
+    "@types/cookie-parser": "^1.4.4",
     "@types/express": "^4.17.17",
-    "@types/jest": "^29.5.3",
+    "@types/jest": "^29.5.5",
     "@types/multer": "^1.4.7",
-    "jest": "^29.6.3",
+    "jest": "^29.7.0",
     "nodemon": "^3.0.1",
-    "prisma": "5.1.1",
+    "prisma": "5.3.1",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
-    "typescript": "^5.1.6"
+    "typescript": "^5.2.2"
   },
   "prisma": {
     "seed": "ts-node --transpile-only prisma/seed.ts"
   },
   "resolutions": {
-    "@nestjs/config": "1.0.1"
+    "@nestjs/config": "^1.0.1"
   }
 }
