--- a/srcs/backend/package.json
+++ b/srcs/backend/package.json
@@ -31,6 +31,7 @@
     "@types/uuid": "^9.0.4",
     "argon2": "^0.31.1",
     "axios": "^1.5.0",
+    "clamscan": "^2.1.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "cloudinary": "^1.40.0",
@@ -50,6 +51,7 @@
     "uuid": "^9.0.1"
   },
   "devDependencies": {
+    "@types/clamscan": "^2.0.5",
     "@types/cookie-parser": "^1.4.4",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.5",
