--- a/srcs/frontend/package.json
+++ b/srcs/frontend/package.json
@@ -5,15 +5,17 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
-    "@mui/icons-material": "^5.14.9",
-    "@mui/material": "^5.14.10",
-    "@nestjs/platform-express": "^10.2.5",
-    "@nestjs/platform-socket.io": "^10.2.5",
+    "@mui/icons-material": "^5.14.11",
+    "@mui/material": "^5.14.11",
+    "@nestjs/platform-express": "^10.2.6",
+    "@nestjs/platform-socket.io": "^10.2.6",
     "@prisma/client": "^5.3.1",
     "@testing-library/jest-dom": "^6.1.3",
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.5.1",
-    "axios": "^1.5.0",
+    "axios": "^1.5.1",
+    "js-cookie": "^3.0.5",
+    "js-cookies": "^1.0.4",
     "jwt-decode": "^3.1.2",
     "konva": "^9.2.1",
     "react": "^18.2.0",
@@ -53,6 +55,7 @@
     ]
   },
   "devDependencies": {
+    "@types/js-cookie": "^3.0.4",
     "backend": "file:../../backend",
     "prisma": "^5.3.1"
   }
