--- a/srcs/backend/package.json
+++ b/srcs/backend/package.json
@@ -26,7 +26,7 @@
     "@nestjs/testing": "^10.2.6",
     "@nestjs/typeorm": "^10.0.0",
     "@nestjs/websockets": "^10.2.6",
-    "@prisma/client": "^5.3.1",
+    "@prisma/client": "^5.4.1",
     "@types/passport-jwt": "^3.0.10",
     "@types/uuid": "^9.0.4",
     "argon2": "^0.31.1",
@@ -59,7 +59,7 @@
     "@types/multer": "^1.4.8",
     "jest": "^29.7.0",
     "nodemon": "^3.0.1",
-    "prisma": "5.3.1",
+    "prisma": "^5.4.1",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
     "typescript": "^5.2.2"
