--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,5 @@ package-lock.json
 *.json
 .env
 package-lock.json
-srcs/backend/dist/
-srcs/frontend/dist/
-.DS_Store
+srcs/backend/dist/*
+srcs/frontend/dist/*
