--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -2,11 +2,8 @@
 # Set base image
 FROM ubuntu:latest
 
-# Install Nginx
-RUN apt-get update && apt-get install -y nginx
-
-# Install vim 
-RUN apt-get install -y vim 
+# Install Nginx and OpenSSL
+RUN apt-get update && apt-get install -y nginx openssl
 
 # Remove the default Nginx configuration file
 RUN rm /etc/nginx/sites-enabled/default
@@ -18,8 +15,12 @@ COPY ./default.conf /etc/nginx/sites-available/
 # Enable your Nginx site configuration
 RUN ln -s /etc/nginx/sites-available/default.conf /etc/nginx/sites-enabled/
 
-# Expose port 80
-EXPOSE 80
+# Generate SSL key & certificate
+RUN mkdir -p /etc/nginx/ssl \
+ && openssl req -x509 -sha256 -nodes -days 365 -newkey rsa:4096 -keyout /etc/nginx/ssl/myCA.key -out /etc/nginx/ssl/myCA.crt -subj /C=FR
 
-# Start Nginx
-CMD ["nginx", "-g", "daemon off;"]
+# Expose port 80 and 443
+EXPOSE 80 443
+
+# Set the entry point of the Docker container to the entry point script
+ENTRYPOINT ["nginx", "-g", "daemon off;"]
