update(improvement to entrypoin.sh in back and front, and merged with main to have changes from Paul)

--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -30,10 +30,10 @@ server {
     server_name localhost;
 
     location / {
-        proxy_pass http://frontend:3000; # The frontend container port
+        proxy_pass https://frontend:3000; # The frontend container port
     }
 
     location /api {
-        proxy_pass http://backend:4000; # The backend container port
+        proxy_pass https://backend:4000; # The backend container port
     }
 }
