--- a/srcs/backend/package.json
+++ b/srcs/backend/package.json
@@ -33,6 +33,7 @@
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "multer": "^1.4.5-lts.1",
     "passport": "^0.6.0",
     "passport-42": "^1.2.6",
     "passport-jwt": "^4.0.1",
@@ -45,14 +46,17 @@
     "socket.io": "^4.7.2",
     "socket.io-parser": "^4.2.4",
     "speakeasy": "^2.0.0",
-    "typeorm": "^0.3.17"
+    "typeorm": "^0.3.17",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@types/cookie-parser": "^1.4.5",
     "@types/jest": "^29.5.6",
+    "@types/multer": "^1.4.9",
     "@types/passport-local": "^1.0.37",
     "@types/qrcode": "^1.5.4",
     "@types/speakeasy": "^2.0.9",
+    "@types/uuid": "^9.0.6",
     "nodemon": "^3.0.1",
     "prisma": "^5.5.2",
     "ts-node": "^10.9.1"
