--- a/srcs/frontend/package.json
+++ b/srcs/frontend/package.json
@@ -14,6 +14,7 @@
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.5.1",
     "axios": "^1.5.1",
+    "js-cookie": "^3.0.5",
     "jwt-decode": "^3.1.2",
     "konva": "^9.2.2",
     "react": "^18.2.0",
@@ -21,6 +22,7 @@
     "react-konva": "^18.2.10",
     "react-router-dom": "^6.17.0",
     "react-scripts": "^5.0.1",
+    "react-transition-group": "^4.4.5",
     "run": "^1.4.0",
     "socket.io-client": "^4.7.2",
     "socket.io-parser": "^4.2.4",
@@ -53,6 +55,7 @@
     ]
   },
   "devDependencies": {
+    "@types/js-cookie": "^3.0.5",
     "backend": "file:../../backend",
     "prisma": "^5.5.2"
   }
