--- a/srcs/backend/package.json
+++ b/srcs/backend/package.json
@@ -33,6 +33,7 @@
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "js-cookie": "^3.0.5",
     "multer": "^1.4.5-lts.1",
     "passport": "^0.6.0",
     "passport-42": "^1.2.6",
