--- a/srcs/frontend/package.json
+++ b/srcs/frontend/package.json
@@ -14,6 +14,7 @@
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.5.1",
     "axios": "^1.6.0",
+    "http": "^0.0.1-security",
     "js-cookie": "^3.0.5",
     "jwt-decode": "^4.0.0",
     "konva": "^9.2.3",
@@ -27,6 +28,7 @@
     "socket.io-client": "^4.7.2",
     "socket.io-parser": "^4.2.4",
     "styled-components": "^6.1.0",
+    "url": "^0.11.3",
     "web-vitals": "^3.5.0"
   },
   "scripts": {
