--- a/srcs/backend/package.json
+++ b/srcs/backend/package.json
@@ -35,6 +35,7 @@
     "express": "^4.18.2",
     "js-cookie": "^3.0.5",
     "multer": "^1.4.5-lts.1",
+    "node-cron": "^3.0.3",
     "passport": "^0.6.0",
     "passport-42": "^1.2.6",
     "passport-jwt": "^4.0.1",
@@ -54,6 +55,7 @@
     "@types/cookie-parser": "^1.4.6",
     "@types/jest": "^29.5.8",
     "@types/multer": "^1.4.10",
+    "@types/node-cron": "^3.0.11",
     "@types/passport-local": "^1.0.38",
     "@types/qrcode": "^1.5.5",
     "@types/speakeasy": "^2.0.10",
