--- a/srcs/backend/package.json
+++ b/srcs/backend/package.json
@@ -10,7 +10,8 @@
     "start": "nodemon",
     "clean": "rm -rf dist",
     "rebuild": "npm run clean && npm run build",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest",
+    "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "author": "",
   "license": "ISC",
@@ -23,6 +24,7 @@
     "@nestjs/passport": "^10.0.2",
     "@nestjs/platform-express": "^10.2.8",
     "@nestjs/platform-socket.io": "^10.2.8",
+    "@nestjs/testing": "^10.2.9",
     "@nestjs/typeorm": "^10.0.0",
     "@prisma/client": "^5.5.2",
     "@types/passport-jwt": "^3.0.13",
@@ -51,6 +53,9 @@
     "uuid": "^9.0.1"
   },
   "devDependencies": {
+    "@babel/core": "^7.23.3",
+    "@babel/preset-env": "^7.23.3",
+    "@babel/preset-typescript": "^7.23.3",
     "@types/cookie-parser": "^1.4.6",
     "@types/jest": "^29.5.7",
     "@types/multer": "^1.4.10",
@@ -58,8 +63,11 @@
     "@types/qrcode": "^1.5.5",
     "@types/speakeasy": "^2.0.9",
     "@types/uuid": "^9.0.6",
+    "babel-jest": "^29.7.0",
     "nodemon": "^3.0.1",
+    "pactum": "^3.5.1",
     "prisma": "^5.5.2",
+    "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1"
   },
   "prisma": {
