--- a/srcs/backend/package.json
+++ b/srcs/backend/package.json
@@ -34,6 +34,7 @@
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "js-cookie": "^3.0.5",
+    "jwt-decode": "^4.0.0",
     "multer": "^1.4.5-lts.1",
     "node-cron": "^3.0.3",
     "passport": "^0.6.0",
