--- a/srcs/backend/package.json
+++ b/srcs/backend/package.json
@@ -11,7 +11,7 @@
     "clean": "rm -rf dist",
     "rebuild": "npm run clean && npm run build",
     "test": "jest",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "jest --watch --no-cache --config ./test/jest-e2e.json"
   },
   "author": "",
   "license": "ISC",
@@ -57,7 +57,7 @@
     "@babel/preset-env": "^7.23.3",
     "@babel/preset-typescript": "^7.23.3",
     "@types/cookie-parser": "^1.4.6",
-    "@types/jest": "^29.5.7",
+    "@types/jest": "^29.5.8",
     "@types/multer": "^1.4.10",
     "@types/passport-local": "^1.0.38",
     "@types/qrcode": "^1.5.5",
