--- a/srcs/backend/package.json
+++ b/srcs/backend/package.json
@@ -22,7 +22,7 @@
     "@nestjs/core": "^10.2.9",
     "@nestjs/jwt": "^10.2.0",
     "@nestjs/passport": "^10.0.2",
-    "@nestjs/platform-express": "^10.2.9",
+    "@nestjs/platform-express": "^10.2.10",
     "@nestjs/platform-socket.io": "^10.2.9",
     "@nestjs/typeorm": "^10.0.1",
     "@prisma/client": "^5.6.0",
@@ -34,10 +34,12 @@
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "jest": "^29.7.0",
     "js-cookie": "^3.0.5",
     "jwt-decode": "^4.0.0",
     "multer": "^1.4.5-lts.1",
     "node-cron": "^3.0.3",
+    "pactum": "^3.5.1",
     "passport": "^0.6.0",
     "passport-42": "^1.2.6",
     "passport-jwt": "^4.0.1",
@@ -50,6 +52,7 @@
     "socket.io": "^4.7.2",
     "socket.io-parser": "^4.2.4",
     "speakeasy": "^2.0.0",
+    "ts-jest": "^29.1.1",
     "typeorm": "^0.3.17",
     "uuid": "^9.0.1"
   },
