--- a/srcs/backend/package.json
+++ b/srcs/backend/package.json
@@ -61,6 +61,7 @@
     "@babel/preset-env": "^7.23.3",
     "@babel/preset-typescript": "^7.23.3",
     "@types/cookie-parser": "^1.4.6",
+    "@types/jest": "^29.5.9",
     "@types/multer": "^1.4.10",
     "@types/node-cron": "^3.0.11",
     "@types/passport-local": "^1.0.38",
