--- a/srcs/frontend/package.json
+++ b/srcs/frontend/package.json
@@ -5,13 +5,13 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
-    "@mui/icons-material": "^5.14.18",
-    "@mui/material": "^5.14.18",
-    "@nestjs/platform-express": "^10.2.8",
-    "@nestjs/platform-socket.io": "^10.2.8",
+    "@mui/icons-material": "^5.14.19",
+    "@mui/material": "^5.14.20",
+    "@nestjs/platform-express": "^10.2.10",
+    "@nestjs/platform-socket.io": "^10.2.10",
     "@prisma/client": "^5.6.0",
-    "@testing-library/jest-dom": "^6.1.4",
-    "@testing-library/react": "^14.1.0",
+    "@testing-library/jest-dom": "^6.1.5",
+    "@testing-library/react": "^14.1.2",
     "@testing-library/user-event": "^14.5.1",
     "axios": "^1.6.2",
     "http": "^0.0.1-security",
@@ -21,8 +21,9 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-konva": "^18.2.10",
-    "react-router-dom": "^6.19.0",
+    "react-router-dom": "^6.20.1",
     "react-scripts": "^5.0.1",
+    "react-toastify": "^9.1.3",
     "react-transition-group": "^4.4.5",
     "run": "^1.4.0",
     "socket.io-client": "^4.7.2",
