--- a/srcs/backend/package.json
+++ b/srcs/backend/package.json
@@ -43,6 +43,7 @@
     "cors": "2.8.5",
     "dotenv": "16.3.1",
     "express": "4.18.2",
+    "image-size": "^1.0.2",
     "jest": "29.7.0",
     "js-cookie": "3.0.5",
     "jwt-decode": "4.0.0",
