This update includes improvements to authentication, session management, and environment configuration. It also addresses Docker Compose settings and code changes related to session handling and security. Review the details below for a comprehensive overview of the enhancements.
In this update, we've made the following key changes:

- Enhanced security with updated secrets.
- Corrected Docker Compose configuration for port mappings.
- Improved session management in authentication service.
- Introduced a new session model in the Prisma schema.
- Implemented session cleanup in the session service.

To ensure the effectiveness of these changes, follow these steps:

1. Update the `.env` file with the new secret.
2. Verify corrected port mappings in the `docker-compose.yml` file.
3. Test authentication and session management.
4. Monitor session cleanup for expired sessions.

In the `session.service.ts` file:
- Added a method `clearExpiredSessions` to clear expired sessions.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,7 +31,7 @@ services:
     image: backend_image # Set the image name
     volumes:
       - backend_volume:/usr/src/app
-    portsjkkk:
+    ports:
       - 4000:4000 
       - 5555:5555 # Map the container port to the host port
     # restart: unless-stopped
