--- a/srcs/frontend/package.json
+++ b/srcs/frontend/package.json
@@ -21,6 +21,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-konva": "18.2.10",
+    "react-one-tab-enforcer": "^2.1.2",
     "react-router-dom": "6.21.0",
     "react-scripts": "5.0.1",
     "react-toastify": "9.1.3",
