--- a/srcs/frontend/package.json
+++ b/srcs/frontend/package.json
@@ -19,6 +19,7 @@
     "jwt-decode": "4.0.0",
     "konva": "9.2.3",
     "react": "18.2.0",
+    "react-device-detect": "^2.2.3",
     "react-dom": "18.2.0",
     "react-konva": "18.2.10",
     "react-router-dom": "6.21.0",
