--- a/srcs/frontend/package.json
+++ b/srcs/frontend/package.json
@@ -19,6 +19,7 @@
     "@testing-library/user-event": "14.5.1",
     "axios": "1.6.2",
     "http": "0.0.1-security",
+    "http-proxy-middleware": "^2.0.6",
     "js-cookie": "3.0.5",
     "jwt-decode": "4.0.0",
     "konva": "9.2.3",
