--- a/srcs/backend/package.json
+++ b/srcs/backend/package.json
@@ -38,7 +38,7 @@
     "argon2": "0.31.2",
     "axios": "1.6.2",
     "class-transformer": "0.5.1",
-    "class-validator": "0.14.0",
+    "class-validator": "^0.14.0",
     "cookie-parser": "1.4.6",
     "cors": "2.8.5",
     "dotenv": "16.3.1",
