--- a/srcs/backend/tsconfig.json
+++ b/srcs/backend/tsconfig.json
@@ -6,7 +6,8 @@
     "strict": true,
     "esModuleInterop": true,
     "experimentalDecorators": true,
-    "emitDecoratorMetadata": true
+    "emitDecoratorMetadata": true,
+    "skipLibCheck": true
   },
   "include": ["src/**/*.ts", "src/socket/socketEvents.tsx"]
 }
