--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 
 # Database settings
-POSTGRES_DB=ft_transcendance_database # The name of your PostgreSQL database
+POSTGRES_DB=ft_transcendance_database # The name of your PostgreSQL dat
 POSTGRES_USER=42_lyon # Your PostgreSQL username
 POSTGRES_PASSWORD=BornToCode # Your PostgreSQL password
 POSTGRES_HOST=db # The hostname of your PostgreSQL database. In docker-compose, this is the name of your database service
